force-app/main/default/objects/FW_Service_Header__mdt/FW_Service_Header__mdt.object-meta.xml
<CustomObject>
    <description>Service Headers</description>
    <label>FW Service Header</label>
    <pluralLabel>FW Service Headers</pluralLabel>
</CustomObject>