force-app/main/default/objects/FW_Service_Header__mdt/fields/AcceptEncoding__c.field-meta.xml
<CustomField>
    <fullName>AcceptEncoding__c</fullName>
    <label>Accept-Encoding</label>
    <length>255</length>
    <type>Text</type>
</CustomField>