force-app/main/default/objects/FW_Service_Header__mdt/fields/ContentEncoding__c.field-meta.xml
<CustomField>
    <fullName>ContentEncoding__c</fullName>
    <label>Content-Encoding</label>
    <length>255</length>
    <type>Text</type>
</CustomField>