force-app/main/default/objects/FW_Service_Header__mdt/fields/ContentLength__c.field-meta.xml
<CustomField>
    <fullName>ContentLength__c</fullName>
    <label>Content-Length</label>
    <length>255</length>
    <type>Text</type>
</CustomField>