force-app/main/default/objects/FW_Service_Header__mdt/fields/ContentType__c.field-meta.xml
<CustomField>
    <fullName>ContentType__c</fullName>
    <label>Content-Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>